tests/netperf/wwu_1G/udp_000/outgoing.txt
root@cf418-nel-02 ~/ipfwd# netperf -c -C -l 30 -H cf498-nel-01 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to cf498-nel-01.cs.wwu.edu () port 0 AF_INET : histogram : interval : dirty data : demo
Socket  Message  Elapsed      Messages                   CPU      Service
Size    Size     Time         Okay Errors   Throughput   Util     Demand
bytes   bytes    secs            #      #   10^6bits/sec % CC     us/KB

  9216    9216   30.03      386497 6281140      948.8     13.11    9.057
 42080           30.03           0               0.0     2.50     1.724

root@cf418-nel-02 ~/ipfwd#


root@cf418-nel-02 ~/i/ipfwd# ./ipfwd 1 0.0
[ipfwd] starting
current:  0.574%, error:  0.6%, probability:  0.000%
current:  1.526%, error:  1.0%, probability:  0.000%
current:  2.399%, error:  0.9%, probability:  0.000%
current:  3.204%, error:  0.8%, probability:  0.000%
current:  3.943%, error:  0.7%, probability:  0.000%
current:  4.626%, error:  0.7%, probability:  0.000%
current:  5.255%, error:  0.6%, probability:  0.000%
current:  4.834%, error:  0.4%, probability:  0.000%
current:  4.443%, error:  0.4%, probability:  0.000%
^C~root@cf418-nel-02 ~/i/ipfwd#
